# Phyling

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  dev_environment.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml  build_aster.yml  build_fasttree.yml  build_iqtree.yml  build_muscle.yml  build_raxml.yml  build_veryfasttree.yml  conda_build_and_test.yml  publish_release.yml  version_bump.yml
lib/: apps.conf.template
lib/perl/: PHYling.pm
scripts/: make_config.sh  phyling.pl
src/phyling/: __init__.py  _menu.py  main.py
src/phyling/lib/: __init__.py  _abc.py  _utils.py  align.py  download.py  tree.py
src/phyling/libphyling/: align.py
src/phyling/pipeline/: _outputprecheck.py  align.py  download.py  filter.py  tree.py
tests/: conftest.py  libphyling_test.py  main_test.py  pipeline_test.py
tests/data/: tree.nw
tests/data/mfa/: 10at10240.faa  10at10240.fna  14at10240.faa  14at10240.fna  22at10240.faa  22at10240.fna  43at10240.faa  43at10240.fna
tests/data/msa/: 10at10240.faa  10at10240.fna  14at10240.faa  14at10240.fna
tests/database/: fake_online_metadata
tests/lib/: align_test.py  download_test.py  tree_test.py
tests/pipeline/: align_test.py  download_test.py  filter_test.py  tree_test.py
