[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "phyling"
authors = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
maintainers = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
license = { file = "LICENSE" }
description = "A lightweight phylogenetic tree builder from annotated genomes."
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "biopython>=1.81",
  "clipkit>=2.1.1",
  "matplotlib>=3.5.3",
  "numpy>=2.0.2,<3.0.0",
  "phykit>=2.0.1",
  "pyfaidx>=0.9.0.3",
  "pyhmmer>=0.12.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-dependency>=0.5.1",
    "pytest-env>=1.1.5",
    "pytest-order>=1.3.0",
]

[project.scripts]
phyling = "phyling.__main__:main"

[project.urls]
"Homepage" = "https://github.com/stajichlab/Phyling"
"Bug Tracker" = "https://github.com/stajichlab/Phyling/issues"

[tool.pytest_env]
PHYLING_DB = { value = "{PWD}/tests/database", transform = true }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -vv --order-dependencies"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203", "E402", "E701"]
